--- a/website/content/reading/01-reading.Rmd
+++ b/website/content/reading/01-reading.Rmd
@@ -11,7 +11,7 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 You are expected to have read this when you show up for the first day of class. The following items are all rather short and shouldn't take too long.
 The "How to read an R help page" section stops once you reach "A.1.2 The basics of accessing and selecting things".
 
-- The [Syllabus](Syllabus)
+- The [Syllabus](/PM566/syllabus)
 - rmarkdown lessons [1](https://rmarkdown.rstudio.com/lesson-1.html), [2](https://rmarkdown.rstudio.com/lesson-2.html), [3](https://rmarkdown.rstudio.com/lesson-3.html) and [8](https://rmarkdown.rstudio.com/lesson-8.html)
 - [How to read an R help page](https://socviz.co/appendix.html#a-little-more-about-r)
 
