--- a/website/content/assignment/03-hw1.Rmd
+++ b/website/content/assignment/03-hw1.Rmd
@@ -2,11 +2,12 @@
 title: "Assignment 01 - Exploratory Data Analysis"
 output: tufte::tufte_html
 link-citations: yes
+date: 2021-09-10
 ---
 
 # Due Date
 
-This assignment is due at the end of the day September 9th, 2020
+This assignment is due at the end of the day September 24th, 2021
 
 # Learning Goals
 - Download, read, and get familiar with an external dataset. 
