--- a/website/content/assignment/05-hw2.Rmd
+++ b/website/content/assignment/05-hw2.Rmd
@@ -2,11 +2,12 @@
 title: "Assignment 02 - Data Viz and Wrangling"
 output: tufte::tufte_html
 link-citations: yes
+date: 2021-09-10
 ---
 
 ## Due Date
 
-September 23, 2020 by midnight Pacific time.
+October 8, 2021 by midnight Pacific time.
 
 For this assignment, we will be analyzing data from USC’s Children’s Health Study.
 The learning objectives are to conduct data wrangling and visualize the data with key questions in mind.
